Same small dark mode fixes

--- a/src/css/dark_theme/general.less
+++ b/src/css/dark_theme/general.less
@@ -1692,6 +1692,10 @@ select.colorselector {
   color: var(--blue-80);
 }
 
+.bgaext_headlines .icon32_x_black {
+  background-color: #fff;
+}
+
 /* Page parties en cours */
 #gameinprogress-module .newbgatable th,
 #gameinprogress-module .newbgatable td {
@@ -2239,6 +2243,6 @@ html:not(.bgaext_gamelist) .ext_delete_button {
 
 /* happy meeple landing page */
 .landing_page_happymeeple .pagesection__content,
-.landing_page_happymeeple b  {
+.landing_page_happymeeple b {
   color: var(--light-80) !important;
 }
